ff_bnn_stage/hls_component/hls_component/logs/hls_run_csim_13424.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/hls_component 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=forward_fw.cpp' from D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/forward_fw.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=forward_fw.hpp' from D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/hls_config.cfg(10)
INFO: [HLS 200-10] Adding design file 'D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/forward_fw.hpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=debug_utils.cpp' from D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/hls_config.cfg(11)
INFO: [HLS 200-10] Adding design file 'D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/debug_utils.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=debug_utils.hpp' from D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/hls_config.cfg(12)
INFO: [HLS 200-10] Adding design file 'D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/debug_utils.hpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=train_tb.cpp' from D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/hls_config.cfg(7)
INFO: [HLS 200-10] Adding test bench file 'D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/train_tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=train_tb' from D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/hls_config.cfg(8)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xa7a100tcsg324-2I' from D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xa7a100t-csg324-2I'
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from D:/TFG/hardware_accelerator_for_DL/ff_bnn_stage/hls_component/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../train_tb.cpp in debug mode
csim.mk:88: recipe for target 'obj/train_tb.o' failed
In file included from ../../../../train_tb.cpp:6:
In file included from ../../../../forward_fw.hpp:5:
In file included from C:/Xilinx/Vitis/2024.2/include/ap_int.h:10:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from C:/Xilinx/Vitis/2024.2/include/hls_half.h:26:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/Vitis/2024.2/include/hls_fpo.h:140:
In file included from C:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../train_tb.cpp:87:5: error: no matching function for call to 'print_first_n_pixels'
    print_first_n_pixels(first_fields, 128, "Primeros 128 bits");
    ^~~~~~~~~~~~~~~~~~~~
../../../../debug_utils.hpp:29:6: note: candidate function not viable: no known conversion from 'SampleFields' to 'pixels_t' (aka 'ap_uint<PIXEL_BITS>') for 1st argument
void print_first_n_pixels(pixels_t pixels, int n, const std::string &title);
     ^
1 warning and 1 error generated.
make: *** [obj/train_tb.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 3 seconds. Total CPU system time: 1 seconds. Total elapsed time: 5.53 seconds; peak allocated memory: 264.988 MB.
